[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/ui/ControlSettings.gd" type="Script" id=1]
[ext_resource path="res://scene/ui/Button.tscn" type="PackedScene" id=2]

[node name="ControlSettings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 2 )]
margin_left = -50.0
margin_right = -14.0
margin_bottom = 14.0
text = "Menu"

[node name="Jog" parent="." instance=ExtResource( 2 )]
margin_left = -41.0
margin_top = 16.0
margin_right = -23.0
margin_bottom = 30.0
text = "Jog"

[node name="Run" parent="." instance=ExtResource( 2 )]
margin_left = -44.0
margin_top = 32.0
margin_right = -20.0
margin_bottom = 46.0
text = "Run"

[node name="Jump" parent="." instance=ExtResource( 2 )]
margin_left = -48.0
margin_top = 48.0
margin_right = -16.0
margin_bottom = 62.0
text = "Jump"

[node name="MoveForward" parent="." instance=ExtResource( 2 )]
margin_left = -76.5
margin_top = 64.0
margin_right = 12.5
margin_bottom = 78.0
text = "Move Forward"

[node name="MoveBackward" parent="." instance=ExtResource( 2 )]
margin_left = -81.5
margin_top = 80.0
margin_right = 17.5
margin_bottom = 94.0
text = "Move Backward"

[node name="MoveLeft" parent="." instance=ExtResource( 2 )]
margin_left = -63.5
margin_top = 96.0
margin_right = -0.5
margin_bottom = 110.0
text = "Move Left"

[node name="MoveRight" parent="." instance=ExtResource( 2 )]
margin_left = -67.5
margin_top = 112.0
margin_right = 3.5
margin_bottom = 126.0
text = "Move Right"

[node name="Done" parent="." instance=ExtResource( 2 )]
margin_left = -17.0
margin_top = 144.0
margin_right = 17.0
margin_bottom = 158.0
text = "Done"

[node name="LabelMenu" type="Label" parent="."]
margin_left = 32.0
margin_right = 72.0
margin_bottom = 14.0

[node name="LabelJog" type="Label" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 30.0

[node name="LabelRun" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 46.0

[node name="LabelJump" type="Label" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 62.0

[node name="LabelMoveForward" type="Label" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 72.0
margin_bottom = 78.0

[node name="LabelMoveBackward" type="Label" parent="."]
margin_left = 32.0
margin_top = 80.0
margin_right = 72.0
margin_bottom = 94.0

[node name="LabelMoveLeft" type="Label" parent="."]
margin_left = 32.0
margin_top = 96.0
margin_right = 72.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMoveRight" type="Label" parent="."]
margin_left = 32.0
margin_top = 112.0
margin_right = 72.0
margin_bottom = 126.0
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Jog" to="." method="_on_Jog_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Jump" to="." method="_on_Jump_pressed"]
[connection signal="pressed" from="MoveForward" to="." method="_on_MoveForward_pressed"]
[connection signal="pressed" from="MoveBackward" to="." method="_on_MoveBackward_pressed"]
[connection signal="pressed" from="MoveLeft" to="." method="_on_MoveLeft_pressed"]
[connection signal="pressed" from="MoveRight" to="." method="_on_MoveRight_pressed"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
